--- a/client/index_nonode.html
+++ b/client/index_nonode.html
@@ -42,7 +42,7 @@
 				<input class="form-control" type="text" name="query" id="query" ng-model="query">
 			</div>
 			<div class="form-group">
-				<button type="submit" class="btn btn-success" ng-click="initPlaces()">Search</button>
+				<button type="submit" class="btn btn-success" ng-click="initPlacesAlt()">Search</button>
 			</div>
 		</form>
 		<section class="map-wrapper" ng-hide="searching === false">
@@ -55,6 +55,6 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular-messages.min.js"></script>
-	<script src="/dist/main.js"></script>
+	<script src="./dist/main.js"></script>
 </body>
 </html>
