--- a/client/index_nonode.html
+++ b/client/index_nonode.html
@@ -51,7 +51,7 @@
 	</section>
 
 
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB99XQamcdZpKoSal7Jx5BX0zw96xVJEhM&libraries=places"></script>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=INSERTAPIKEYHERE&libraries=places"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.7/angular-messages.min.js"></script>
